# Tempo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  tach.toml
.github/workflows/: tests_linters.yml
docker/: cpu.dockerfile  gpu.dockerfile
docs/: indexing_semantics.md
repro/: README.md  build_run_container.sh  data_loading.py  launch_lib.py  pinned_buffer_microbenchmark.py  run_all_exprs_and_plot.sh
repro/expected_results/: speed_up.txt
repro/sec7_2_llama32_decode/: run_ablation.py  run_block_size_microbenchmark.py  run_compile_time_scaling.py  run_measure_tpt.py  run_mem_usage.py  shared.py
repro/sec7_2_llama32_decode/impls/: jax_llama32.py  jax_llama32_old.py  tempo_llama32.py  tokenizer_shared.py  torch_llama32.py
repro/sec7_2_llama32_decode/plot/: plot_ablation.py  plot_block_size.py  plot_compile_time_scaling.py  plot_llama32_time_per_token.py  plot_mem_usage.py  plot_shared.py
repro/sec7_2_lm_decode/: bench_runner.py  run_block_size_microbenchmark.py  run_measure_tpt.py  run_mem_usage.py  shared.py
repro/sec7_2_lm_decode/impls/: jax_gpt2.py  tempo_gpt2.py  torch_gpt2.py  torchnaive_gpt2.py
repro/sec7_2_lm_decode/plot/: plot_block_size.py  plot_gpt2_time_per_token.py  plot_mem_usage.py  plot_shared.py
repro/sec7_3_rl_train/: run_ablation.py  run_large_obs.py  run_small_to_med_scale.py  shared.py
repro/sec7_3_rl_train/impls/: cleanrl_ppo.py  cleanrl_ppo_caching.py  rl_games_ppo.py  rllib_ppo.py  sf_ppo.py  tempo_ppo.py
repro/sec7_3_rl_train/plot/: plot_ablation.py  plot_large_obs.py  plot_shared.py  plot_small_to_med_scale.py  speedup_analysis.py
repro/sec7_4_algo_specific_sched/: run_algo_specific_sched.py  shared.py
repro/sec7_4_algo_specific_sched/impls/: tempo_reinforce.py
repro/sec7_4_algo_specific_sched/plot/: plot_algo_specific_sched.py
requirements/: requirements-baselines.txt  requirements-dev.txt  requirements-envs.txt  requirements-examples.txt  requirements-llm.txt  requirements-repro.txt  requirements.txt
tempo/api/: INDEXING.md  __init__.py  autodiff.py  backprop.py  compiler.py  expr_to_recurrent_tensor.py  recurrent_tensor.py  tempo_context_manager.py
tempo/api/data/: __init__.py  dataloader.py  dataloader_desc.py  runtime_dataloader.py  udfs.py
tempo/api/distributions/: __init__.py  categorical.py  distribution.py  normal.py  uniform.py
tempo/api/llm/: inference_engine.py
tempo/core/: analysis_ctx.py  compilation_ctx.py  configs.py  dataflow_graph.py  dataflow_graph_interface.py  datatypes.py  debug_utils.py  dependence_graph.py  device.py  dg_renderer.py  dim_utils.py  dl_backend.py  dl_backends.py  domain.py  dtype.py  external_state_store.py  fast_object_pool.py  global_objects.py  index_expr.py  isl_context_factory.py  isl_types.py  op_tags.py  shape.py  statement_type.py  storage_methods.py  subclass_utils.py  symbol_dict.py  symbolic_tensor.py  tensor_op.py  tensor_ops.py  thunk.py  thunk_emitter.py  thunk_udf.py  torch_params.md  utils.py
tempo/runtime/: backend_compiler.py  inplace_buffer_thunk_wrapper.py  lazy_slice_thunk_wrapper.py  page_locked_buffer_manager.py  thunk_emitter.py  thunk_emitter_base.py  thunk_launcher.py
tempo/transformations/: analyse_device_assignment.py  analyse_donations.py  analyse_storage_methods.py  clean_up_broadcasting_ops.py  compilation_pass.py  fold_pads_n_masks_into_storage.py  frontend_compiler.py  graph_partitioning_utils.py  group_dataflow_regions.py  grouping_utils.py  handle_dynamic_bounds.py  individualize_low_cost.py  iterate_compilation_pass.py  merge_copy_analysis.py  post_process_schedule.py  statify.py  validate_pdg.py  visualize_graph.py
tempo/utils/: common.py  cprofiler.py  dg_utils.py  isl.py  jax_profiler.py  logger.py  make_sink.py  memory_estimator.py  profile_dump.py  resource_monitor.py  torch_profiler.py  visit.py
tests/: affected_dims_test.py  attention_rope_test.py  computation_correctness_test.py  conftest.py  constant_folding_test.py  conv_test.py  distribution_correctness_test.py  domain_test.py  dot_shape_test.py  index_expr_test.py  integration_test.py  isl_combine_edges_test.py  isl_utils_test.py  jax_torch_eq_test.py  learning_test.py  linear_test.py  multihead_attention_test.py  object_pool_test.py  recurrent_tensor_test.py  repeat_test.py  replay_memory_test.py  rms_norm_test.py  rope_test.py  shape_test.py  sort_test.py  swiglu_test.py  symbolic_autodiff_test.py  tensor_store_test.py
(+110 files in other folders)
